--- a/Asesoria/SQLiteDatabaseBrowserPortable/Data/settings/SQLiteDatabaseBrowserPortableSettings.ini
+++ b/Asesoria/SQLiteDatabaseBrowserPortable/Data/settings/SQLiteDatabaseBrowserPortableSettings.ini
@@ -1,5 +1,5 @@
 [SQLiteDatabaseBrowserPortableSettings]
 LastDrive=D:
-LastDirectory=\Nube\OneDrive - unicauca.edu.co\Cursos Online\Analisis de Datos\Asesoria\SQLiteDatabaseBrowserPortable
+LastDirectory=\Nube\OneDrive - unicauca.edu.co\Cursos Online\Analisis de Datos\TalentoTech\Asesoria\SQLiteDatabaseBrowserPortable
 [PortableApps.comLauncherLastRunEnvironment]
-PAL:LastPortableAppsBaseDir=D:\Nube\OneDrive - unicauca.edu.co\Cursos Online\Analisis de Datos
+PAL:LastPortableAppsBaseDir=D:\Nube\OneDrive - unicauca.edu.co\Cursos Online\Analisis de Datos\TalentoTech
